--- a/index.html
+++ b/index.html
@@ -1,45 +1,63 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Img-manipulator</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Map</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <input type="file" name="Open" id="file">
-    <label for="file">
-        Open File
-    </label>
-    <div id="editor">
-        <img id="img"></img>
-        <button id="grayscale">grayscale</button>
-    </div>
+  <input type="file" name="Open" id="file">
+  <label for="file">
+    Open File
+  </label>
+
+
+  <div id="editor">
+    <img id="img"></img>
+    <button id="rotate90">rotoate90</button>
+  </div>
 </body>
 
 <script type="module">
-    import init, { grayscale } from "./pkg/img_map.js";
-    async function main() {
-        await init();
+  import init, { process } from "./pkg/img_map.js"
+  async function main() {
+    await init();
+  }
+  main();
+
+  const original_img = document.getElementById("img");
+  const regex_base64 = /data:image\/([a-zA-Z]*);base64,([^\"]*)/;
+
+  document.getElementById("file").addEventListener("change", (event) => {
+    let img_file = event.target.files[0];
+    var reader = new FileReader();
+    reader.onloadend = function (e) {
+      img.src = reader.result;
     }
-    main();
+    reader.readAsDataURL(img_file);
+    original_img.style.display = "inline";
+  });
 
-    document.getElementById("file").addEventListener("change", (event) => {
-        let file = event.target.files[0];
-        const img = document.getElementById("img");
-        var reader = new FileReader();
-        reader.onloadend = function (e) {
-            img.src = reader.result;
-            console.log(reader)
-        }
-        reader.readAsDataURL(file);
-        img.style.display = "inline"
-        document.getElementById('editor').appendChild(img)
-    });
 
-    document.getElementById("grayscale").addEventListener("click", () => {
-        grayscale();
-        console.log("grayscale")
-    });
+  const btn = document.getElementById("rotate90");
+
+  btn.addEventListener("click", () => {
+    btn.setAttribute("disabled", true);
+    btn.textContent = "processing...";
+
+    const base64_img = original_img.src.match(regex_base64)[2];
+    let processed_base64 = process(base64_img);
+
+    btn.textContent = "Success";
+    btn.setAttribute("disabled", false);
+
+    original_img.src = "data:image/png;base64," + processed_base64;
+  });
 </script>
+</body>
 
 </html>
